--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -203,17 +203,8 @@
     "            rax.append(self.waypoints.x[n] + self.bound*np.sin(self.waypoints.yaw[n]))\n",
     "            ray.append(self.waypoints.y[n] - self.bound*np.cos(self.waypoints.yaw[n]))\n",
     "        \n",
-    "        return lax, lay, rax, ray"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Spline(Spline):\n",
-    "    \n",
+    "        return lax, lay, rax, ray\n",
+    "\n",
     "    def visualize(self):\n",
     "        \"\"\" Function to visualize present output \"\"\"\n",
     "\n",
@@ -286,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "30255d2c",
    "metadata": {},
    "outputs": [],
@@ -349,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "66e39c65",
    "metadata": {},
    "outputs": [],
@@ -419,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -479,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -715,7 +706,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 13,
+   "execution_count": 29,
    "outputs": []
   },
   {
@@ -727,7 +718,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'spline' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-fe73a4bb1e84>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mspline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_steer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.16\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'spline.optimize_min_quintic_1()'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mspline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvisualize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'spline' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "spline.max_steer = 0.16\n",
+    "%time spline.optimize_min_quintic_1()\n",
+    "spline.visualize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "8a05239b",
    "metadata": {},
    "outputs": [
@@ -737,8 +751,8 @@
      "text": [
       "Attempting optimization minima\n",
       "optimized true\n",
-      "CPU times: user 5.63 s, sys: 216 ms, total: 5.85 s\n",
-      "Wall time: 20.6 s\n"
+      "CPU times: user 2.03 s, sys: 77.7 ms, total: 2.11 s\n",
+      "Wall time: 8.74 s\n"
      ]
     },
     {
@@ -748,7 +762,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "50a352a40ff14487b3ec4fc602f21934"
+       "model_id": "71ecb0dc32aa412f86f69dfcb577dc11"
       }
      },
      "metadata": {}
@@ -760,7 +774,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "5a6b6cee921b4c0091cb440175b266d8"
+       "model_id": "bc72b5b246e1426d87fd66c47da91d09"
       }
      },
      "metadata": {}
@@ -772,7 +786,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "79c7e2ec92dd484e93eb6ffd0561d776"
+       "model_id": "0bd7b1bc1ca44d13b90eb41277e03dc7"
       }
      },
      "metadata": {}
@@ -784,7 +798,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "78cf0a8a15f44e779b1f07a2b0773a7d"
+       "model_id": "b7c1eb060f8843ae8e85f4735a04b7d4"
       }
      },
      "metadata": {}
@@ -812,8 +826,8 @@
      "text": [
       "Attempting optimization minima\n",
       "optimized true\n",
-      "CPU times: user 7min 39s, sys: 600 ms, total: 7min 40s\n",
-      "Wall time: 7min 40s\n"
+      "CPU times: user 1min 58s, sys: 0 ns, total: 1min 58s\n",
+      "Wall time: 1min 58s\n"
      ]
     },
     {
@@ -823,7 +837,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "f1fdc723ca5a4274bd93c738b7549b11"
+       "model_id": "752883cc07e740e591d6079800b8eb60"
       }
      },
      "metadata": {}
@@ -835,7 +849,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "4bbafde8ccf24cbfbb1813e2263504e5"
+       "model_id": "5dab1be5cfa14c86852740bb5bc73301"
       }
      },
      "metadata": {}
@@ -847,7 +861,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6edefa5a47fa4becb0b0c040f7e89f76"
+       "model_id": "674a88811f0449f881b0d90b4efca814"
       }
      },
      "metadata": {}
@@ -859,7 +873,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "50bbc505046443e1b35bee7b83facc1d"
+       "model_id": "c933cc1e13c84f4abf5669306c2e22c2"
       }
      },
      "metadata": {}
