--- a/main.ipynb
+++ b/main.ipynb
@@ -13,14 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
     "import time\n",
-    "import nlopt\n",
     "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -33,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "30255d2c",
    "metadata": {},
    "outputs": [],
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "66e39c65",
    "metadata": {},
    "outputs": [],
@@ -410,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -470,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -706,7 +705,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 29,
+   "execution_count": 9,
    "outputs": []
   },
   {
@@ -718,30 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'spline' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-fe73a4bb1e84>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mspline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_steer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.16\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'spline.optimize_min_quintic_1()'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mspline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvisualize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'spline' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "spline.max_steer = 0.16\n",
-    "%time spline.optimize_min_quintic_1()\n",
-    "spline.visualize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "8a05239b",
    "metadata": {},
    "outputs": [
@@ -751,8 +727,8 @@
      "text": [
       "Attempting optimization minima\n",
       "optimized true\n",
-      "CPU times: user 2.03 s, sys: 77.7 ms, total: 2.11 s\n",
-      "Wall time: 8.74 s\n"
+      "CPU times: user 2.69 s, sys: 79.2 ms, total: 2.77 s\n",
+      "Wall time: 12.5 s\n"
      ]
     },
     {
@@ -762,7 +738,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "71ecb0dc32aa412f86f69dfcb577dc11"
+       "model_id": "85cb53acf05e4132a3b9fa6544018ddb"
       }
      },
      "metadata": {}
@@ -774,7 +750,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "bc72b5b246e1426d87fd66c47da91d09"
+       "model_id": "c7e2b4be86224deb8c11156b8917da93"
       }
      },
      "metadata": {}
@@ -786,7 +762,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "0bd7b1bc1ca44d13b90eb41277e03dc7"
+       "model_id": "fe85baabf9f04b92b09af68ffc601fed"
       }
      },
      "metadata": {}
@@ -798,7 +774,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b7c1eb060f8843ae8e85f4735a04b7d4"
+       "model_id": "23c0d98c0268490b8edfc397e05c9f29"
       }
      },
      "metadata": {}
@@ -812,6 +788,76 @@
     "\n",
     "spline = Spline(ax, ay, boundary)\n",
     "%time spline.optimize_min_quintic_2(constrained=False)\n",
+    "spline.visualize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Attempting optimization minima\n",
+      "optimized true\n",
+      "CPU times: user 50.6 s, sys: 586 ms, total: 51.2 s\n",
+      "Wall time: 2min 32s\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "fddbaac4cca1426694ddc52019424d95"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "fc2c5cd96cb14b14b79450af020570a2"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "9d020f014d69473fb6e7c26109dc5718"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c999a49bec7d483f9644d869267058a5"
+      }
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "spline.max_steer = 0.16\n",
+    "%time spline.optimize_min_quintic_1()\n",
     "spline.visualize()"
    ]
   },
