--- a/main.ipynb
+++ b/main.ipynb
@@ -13,12 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "5de66751",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Warning: Cannot change to a different GUI toolkit: qt. Using widget instead.\n"
+     ]
+    }
+   ],
    "source": [
-    "%matplotlib widget\n",
+    "%matplotlib qt\n",
     "import time\n",
     "import math\n",
     "import numpy as np\n",
@@ -32,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
@@ -115,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -202,56 +210,51 @@
     "            rax.append(self.waypoints.x[n] + self.bound*np.sin(self.waypoints.yaw[n]))\n",
     "            ray.append(self.waypoints.y[n] - self.bound*np.cos(self.waypoints.yaw[n]))\n",
     "        \n",
-    "        return lax, lay, rax, ray\n",
+    "        return lax, lay, rax, ray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize(spline):\n",
+    "    \"\"\" Function to visualize present output \"\"\"\n",
     "\n",
-    "    def visualize(self):\n",
-    "        \"\"\" Function to visualize present output \"\"\"\n",
+    "    plt.subplots(1)\n",
+    "    plt.plot(spline.left_bound.x, spline.left_bound.y, '--r', alpha=0.5, label=\"left boundary\")\n",
+    "    plt.plot(spline.right_bound.x, spline.right_bound.y, '--g', alpha=0.5, label=\"right boundary\")\n",
+    "    plt.plot(spline.default_path.x, spline.default_path.y, '-y', label=\"default\")\n",
+    "    plt.plot(spline.optimized_path.x, spline.optimized_path.y, '-m', label=\"optimized\")\n",
+    "    plt.plot(spline.ctr_points.x, spline.ctr_points.y, 'xr', alpha=0.5, label=\"control points\")\n",
+    "    plt.plot(spline.waypoints.x, spline.waypoints.y, '.', label=\"waypoints\")\n",
+    "    plt.grid(True)\n",
+    "    plt.legend()\n",
+    "    plt.title(\"Path\")\n",
+    "    plt.axis(\"equal\")\n",
     "\n",
-    "        plt.subplots(1)\n",
-    "        plt.plot(spline.left_bound.x, spline.left_bound.y, '--r', alpha=0.5, label=\"left boundary\")\n",
-    "        plt.plot(spline.right_bound.x, spline.right_bound.y, '--g', alpha=0.5, label=\"right boundary\")\n",
-    "        plt.plot(spline.default_path.x, spline.default_path.y, '-y', label=\"default\")\n",
-    "        plt.plot(spline.optimized_path.x, spline.optimized_path.y, '-m', label=\"optimized\")\n",
-    "        plt.plot(spline.ctr_points.x, spline.ctr_points.y, 'xr', alpha=0.5, label=\"control points\")\n",
-    "        plt.plot(spline.waypoints.x, spline.waypoints.y, '.', label=\"waypoints\")\n",
-    "        plt.grid(True)\n",
-    "        plt.legend()\n",
-    "        plt.title(\"Path\")\n",
-    "        plt.axis(\"equal\")\n",
+    "    # Heading plot\n",
+    "    plt.subplots(1)\n",
+    "    plt.plot([np.rad2deg(iyaw) for iyaw in spline.default_path.yaw], \"-y\", label=\"original\")\n",
+    "    plt.plot([np.rad2deg(iyaw) for iyaw in spline.optimized_path.yaw], \"-m\", label=\"optimized\")\n",
+    "    plt.grid(True)\n",
+    "    plt.legend()\n",
+    "    plt.title(\"Heading\")\n",
+    "    plt.xlabel(\"line length[m]\")\n",
+    "    plt.ylabel(\"yaw angle[deg]\")\n",
     "\n",
-    "        # Heading plot\n",
-    "        plt.subplots(1)\n",
-    "        plt.plot([np.rad2deg(iyaw) for iyaw in spline.default_path.yaw], \"-y\", label=\"original\")\n",
-    "        plt.plot([np.rad2deg(iyaw) for iyaw in spline.optimized_path.yaw], \"-m\", label=\"optimized\")\n",
-    "        plt.grid(True)\n",
-    "        plt.legend()\n",
-    "        plt.title(\"Heading\")\n",
-    "        plt.xlabel(\"line length[m]\")\n",
-    "        plt.ylabel(\"yaw angle[deg]\")\n",
+    "    # Curvature plot\n",
+    "    plt.subplots(1)\n",
+    "    plt.plot(spline.default_path.k, \"-y\", label=\"original\")\n",
+    "    plt.plot(spline.optimized_path.k, \"-m\", label=\"optimized\")\n",
+    "    plt.grid(True)\n",
+    "    plt.legend()\n",
+    "    plt.title(\"Curvature\")\n",
+    "    plt.xlabel(\"line length[m]\")\n",
+    "    plt.ylabel(\"curvature [1/m]\")\n",
     "\n",
-    "        # Curvature plot\n",
-    "        plt.subplots(1)\n",
-    "        plt.plot(spline.default_path.k, \"-y\", label=\"original\")\n",
-    "        plt.plot(spline.optimized_path.k, \"-m\", label=\"optimized\")\n",
-    "        plt.grid(True)\n",
-    "        plt.legend()\n",
-    "        plt.title(\"Curvature\")\n",
-    "        plt.xlabel(\"line length[m]\")\n",
-    "        plt.ylabel(\"curvature [1/m]\")\n",
-    "\n",
-    "        # Jerk plot\n",
-    "        plt.subplots(1)\n",
-    "        def_jerk, opt_jerk = spline.calc_d(spline.default_path.k, spline.optimized_path.k)\n",
-    "        plt.plot(def_jerk[:-5], \"-y\", label=\"original\")\n",
-    "        plt.plot(opt_jerk[:-5], \"-m\", label=\"optimized\")\n",
-    "        plt.grid(True)\n",
-    "        plt.legend()\n",
-    "        plt.title(\"Curvature Rate\")\n",
-    "        plt.xlabel(\"line length[m]\")\n",
-    "        plt.ylabel(\"curvature rate\")\n",
-    "        plt.show()\n",
-    "\n",
-    "        plt.show()"
+    "    plt.show()"
    ]
   },
   {
@@ -276,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "id": "30255d2c",
    "metadata": {},
    "outputs": [],
@@ -339,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "66e39c65",
    "metadata": {},
    "outputs": [],
@@ -409,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -469,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -705,7 +708,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 9,
+   "execution_count": 51,
    "outputs": []
   },
   {
@@ -717,28 +720,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "id": "8a05239b",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Attempting optimization minima\n",
-      "optimized true\n",
-      "CPU times: user 2.69 s, sys: 79.2 ms, total: 2.77 s\n",
-      "Wall time: 12.5 s\n"
-     ]
-    },
-    {
      "output_type": "display_data",
      "data": {
       "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "85cb53acf05e4132a3b9fa6544018ddb"
+       "model_id": "061988ec1ee14bfda84b82a52474b94f"
       }
      },
      "metadata": {}
@@ -750,7 +743,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c7e2b4be86224deb8c11156b8917da93"
+       "model_id": "0074e76e09fc409bad95d771623bc39d"
       }
      },
      "metadata": {}
@@ -762,19 +755,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "fe85baabf9f04b92b09af68ffc601fed"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "23c0d98c0268490b8edfc397e05c9f29"
+       "model_id": "85146ddda23148469fbbcb12be2a24cc"
       }
      },
      "metadata": {}
@@ -787,156 +768,9 @@
     "ax = np.array([0.0, 7.16, 13.68, 22.3, 30.64, 39.6, 50.4])\n",
     "\n",
     "spline = Spline(ax, ay, boundary)\n",
-    "%time spline.optimize_min_quintic_2(constrained=False)\n",
-    "spline.visualize()"
+    "# %time spline.optimize_min_quintic_2(constrained=False)\n",
+    "visualize(spline)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Attempting optimization minima\n",
-      "optimized true\n",
-      "CPU times: user 50.6 s, sys: 586 ms, total: 51.2 s\n",
-      "Wall time: 2min 32s\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "fddbaac4cca1426694ddc52019424d95"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "fc2c5cd96cb14b14b79450af020570a2"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9d020f014d69473fb6e7c26109dc5718"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c999a49bec7d483f9644d869267058a5"
-      }
-     },
-     "metadata": {}
-    }
-   ],
-   "source": [
-    "spline.max_steer = 0.16\n",
-    "%time spline.optimize_min_quintic_1()\n",
-    "spline.visualize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Attempting optimization minima\n",
-      "optimized true\n",
-      "CPU times: user 1min 58s, sys: 0 ns, total: 1min 58s\n",
-      "Wall time: 1min 58s\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "752883cc07e740e591d6079800b8eb60"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "5dab1be5cfa14c86852740bb5bc73301"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "674a88811f0449f881b0d90b4efca814"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c933cc1e13c84f4abf5669306c2e22c2"
-      }
-     },
-     "metadata": {}
-    }
-   ],
-   "source": [
-    "spline.max_curvature = 0.034\n",
-    "%time spline.optimize_min_quintic_2(constrained=True)\n",
-    "spline.visualize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
