fixed the bisector method

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,18 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 89,
    "id": "5de66751",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Warning: Cannot change to a different GUI toolkit: qt. Using widget instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib qt\n",
     "import time\n",
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 90,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -76,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 91,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
@@ -123,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 92,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -194,9 +186,40 @@
     "        ddist = np.hypot(dx, dy)\n",
     "\n",
     "        return np.sum(ddist)\n",
+    "    \n",
+    "    def calc_bisector_yaw_curvature(self, x, y):\n",
+    "\n",
+    "        dx, dy = self.calc_d(x,y)\n",
+    "        ddx, ddy = self.calc_d(dx, dy)\n",
+    "        yaw, k = [], []\n",
+    "\n",
+    "        # curvature calculation\n",
+    "        for i in range(0, len(x)):\n",
+    "            k.append( (ddy[i] * dx[i] - ddx[i] * dy[i]) / ((dx[i]**2 + dy[i]**2)**(3/2)) )\n",
+    "    \n",
+    "        # firspoint yaw unchanged\n",
+    "        yaw.append(math.atan2(dy[0], dx[0]))\n",
+    "\n",
+    "        for i in range(1, len(x)-1):\n",
+    "            \n",
+    "            #first derivative unit vectors at each point\n",
+    "            d0 = np.array( [dx[i], dy[i]] ) / np.hypot( dx[i], dy[i] )\n",
+    "            d1 = np.array( [dx[i], dy[i]] ) / np.hypot( dx[i], dy[i] )\n",
+    "            d_bisect = d0 + d1\n",
+    "            yaw.append(math.atan2(d_bisect[0], d_bisect[1]))\n",
+    "        \n",
+    "        #lastpoint yaw unchanged\n",
+    "        yaw.append(math.atan2(dy[-1], dx[-1]))\n",
+    "        return yaw, k\n",
+    "        \n",
+    "\n",
+    "\n",
     "\n",
     "    def init_boundary(self):\n",
     "        \"\"\" Determines the position of boundary lines for visualization \"\"\"\n",
+    "\n",
+    "        # initialize headings\n",
+    "        rax, ray, lax, lay = [], [], [], []\n",
     "\n",
     "        # initialize headings\n",
     "        rax, ray, lax, lay = [], [], [], []\n",
@@ -215,12 +238,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def visualize(spline):\n",
+    "def visualize(spline, input_only=False):\n",
     "    \"\"\" Function to visualize present output \"\"\"\n",
+    "\n",
+    "    if input_only==True:\n",
+    "        plt.subplots(1)\n",
+    "        plt.plot(spline.left_bound.x, spline.left_bound.y, '--r', alpha=0.5, label=\"left boundary\")\n",
+    "        plt.plot(spline.right_bound.x, spline.right_bound.y, '--g', alpha=0.5, label=\"right boundary\")\n",
+    "        plt.plot(spline.default_path.x, spline.default_path.y, '-y', label=\"default\")\n",
+    "        plt.plot(spline.waypoints.x, spline.waypoints.y, '.', label=\"waypoints\")\n",
+    "        plt.grid(True)\n",
+    "        plt.legend()\n",
+    "        plt.axis(\"equal\")\n",
+    "        plt.show()\n",
+    "        return\n",
     "\n",
     "    plt.subplots(1)\n",
     "    plt.plot(spline.left_bound.x, spline.left_bound.y, '--r', alpha=0.5, label=\"left boundary\")\n",
@@ -279,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 94,
    "id": "30255d2c",
    "metadata": {},
    "outputs": [],
@@ -342,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 95,
    "id": "66e39c65",
    "metadata": {},
    "outputs": [],
@@ -412,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 96,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -472,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 97,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -708,68 +743,25 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 51,
+   "execution_count": 98,
    "outputs": []
   },
   {
-   "source": [
-    "## Curve Road Test"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 99,
    "id": "8a05239b",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "061988ec1ee14bfda84b82a52474b94f"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "0074e76e09fc409bad95d771623bc39d"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "85146ddda23148469fbbcb12be2a24cc"
-      }
-     },
-     "metadata": {}
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# define input path\n",
-    "boundary = 2.0\n",
-    "ay = np.array([-2.0, 2.3, 5.25, 8.6, 8.2, 5.3, -2.6])\n",
-    "ax = np.array([0.0, 7.16, 13.68, 22.3, 30.64, 39.6, 50.4])\n",
-    "\n",
-    "spline = Spline(ax, ay, boundary)\n",
-    "# %time spline.optimize_min_quintic_2(constrained=False)\n",
-    "visualize(spline)"
+    "import pandas as pd\n",
+    "dir_path = 'waypoints/s_test.csv'\n",
+    "df = pd.read_csv(dir_path)\n",
+    "ax = df['x'].values.tolist()\n",
+    "ay = df['y'].values.tolist()\n",
+    "# ax, ay = ax[0:40], ay[0:40]\n",
+    "boundary = 5.0\n",
+    "path = Spline(ax, ay, boundary)\n",
+    "visualize(path, input_only=True)\n"
    ]
   }
  ],
