working bisector function

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
     "    def __init__(self, ax, ay, bound, wheelbase=2.5, max_steer=0.95, max_curvature=5.0):\n",
     "        \n",
     "        #input waypoint coordinates\n",
-    "        ayaw, k = self.calc_yaw_curvature(ax, ay)\n",
+    "        ayaw, k = self.calc_bisector_yaw_curvature(ax, ay)\n",
     "        self.waypoints = Path(ax, ay, ayaw, k)\n",
     "\n",
     "        self.wheelbase = wheelbase\n",
@@ -203,29 +203,22 @@
     "        for i in range(1, len(x)-1):\n",
     "            \n",
     "            #first derivative unit vectors at each point\n",
-    "            d0 = np.array( [dx[i], dy[i]] ) / np.hypot( dx[i], dy[i] )\n",
-    "            d1 = np.array( [dx[i], dy[i]] ) / np.hypot( dx[i], dy[i] )\n",
-    "            d_bisect = d0 + d1\n",
-    "            yaw.append(math.atan2(d_bisect[0], d_bisect[1]))\n",
+    "            d0 = np.array( [dx[i], dy[i]] )\n",
+    "            d0_hat = d0 /  np.linalg.norm(d0)\n",
+    "            d1 = np.array( [dx[i-1], dy[i-1]] )\n",
+    "            d1_hat = d1 / np.linalg.norm(d1)\n",
+    "            d_bisect = d0_hat + d1_hat\n",
+    "            yaw.append(math.atan2(d_bisect[1], d_bisect[0]))\n",
     "        \n",
     "        #lastpoint yaw unchanged\n",
     "        yaw.append(math.atan2(dy[-1], dx[-1]))\n",
     "        return yaw, k\n",
-    "        \n",
-    "\n",
-    "\n",
     "\n",
     "    def init_boundary(self):\n",
     "        \"\"\" Determines the position of boundary lines for visualization \"\"\"\n",
     "\n",
     "        # initialize headings\n",
     "        rax, ray, lax, lay = [], [], [], []\n",
-    "\n",
-    "        # initialize headings\n",
-    "        rax, ray, lax, lay = [], [], [], []\n",
-    "        dyaw = self.waypoints.yaw.copy()\n",
-    "        for n in range(1, len(ax)-1):\n",
-    "            self.waypoints.yaw[n] = 0.5*(dyaw[n] + dyaw[n-1])\n",
     "\n",
     "        for n in range(0, len(self.waypoints.yaw)):\n",
     "            lax.append(self.waypoints.x[n] - self.bound*np.sin(self.waypoints.yaw[n]))\n",
@@ -238,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "id": "30255d2c",
    "metadata": {},
    "outputs": [],
@@ -324,13 +317,9 @@
     "    def calc_1st_derivative_heuristic(self, ax, ay):\n",
     "        \"\"\" Approximates the first derivative vector at all the waypoints \"\"\"\n",
     "\n",
+    "        ayaw, _ = self.calc_bisector_yaw_curvature(ax, ay)\n",
     "        n_points = len(ax)\n",
     "        dx, dy = [], []\n",
-    "\n",
-    "        dyaw, k = self.calc_yaw_curvature(ax, ay)\n",
-    "        ayaw = dyaw.copy()\n",
-    "        for n in range(1, len(ax)-1):\n",
-    "            ayaw[n] = 0.5*(dyaw[n] + dyaw[n-1])\n",
     "\n",
     "        for n in range(n_points):\n",
     "\n",
@@ -377,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "id": "66e39c65",
    "metadata": {},
    "outputs": [],
@@ -447,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -507,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -743,12 +732,12 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 98,
+   "execution_count": 10,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "id": "8a05239b",
    "metadata": {},
    "outputs": [],
