--- a/main.ipynb
+++ b/main.ipynb
@@ -738,19 +738,78 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8a05239b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def path_planning(ax, ay, boundary, n_point=7):\n",
+    "    \"\"\" Function to conduct path planning optimization n_points at a time \"\"\"\n",
+    "\n",
+    "    x, y , yaw, k = [], [], [], []\n",
+    "    segments = len(ax) // n_point\n",
+    "\n",
+    "    for s in range(segments):\n",
+    "\n",
+    "        print(\"Optimizing segment \", s+1, \" of \", segments+1)\n",
+    "\n",
+    "        sx = ax [ s*n_point : (s+1)*n_point ]\n",
+    "        sy = ay [ s*n_point : (s+1)*n_point ]\n",
+    "\n",
+    "        spline = Spline(sx, sy, boundary)\n",
+    "        %time spline.optimize_min_quintic_2()\n",
+    "\n",
+    "        x = np.concatenate(( x, spline.optimized_path.x ))\n",
+    "        y = np.concatenate(( y, spline.optimized_path.y ))\n",
+    "        yaw = np.concatenate(( yaw, spline.optimized_path.yaw ))    \n",
+    "        k = np.concatenate(( k, spline.optimized_path.k ))\n",
+    "    \n",
+    "    path = Spline(ax, ay, boundary)\n",
+    "    path.optimized_path.x = x\n",
+    "    path.optimized_path.y = y\n",
+    "    path.optimized_path.yaw = yaw\n",
+    "    path.optimized_path.k = k\n",
+    "\n",
+    "    visualize(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8a05239b",
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Optimizing segment  1  of  4\n",
+      "Attempting optimization minima\n",
+      "optimized true\n",
+      "CPU times: user 2.72 s, sys: 74.1 ms, total: 2.8 s\n",
+      "Wall time: 14.7 s\n",
+      "Optimizing segment  2  of  4\n",
+      "Attempting optimization minima\n",
+      "optimized true\n",
+      "CPU times: user 1.55 s, sys: 39.5 ms, total: 1.59 s\n",
+      "Wall time: 6.96 s\n",
+      "Optimizing segment  3  of  4\n",
+      "Attempting optimization minima\n",
+      "optimized true\n",
+      "CPU times: user 2.1 s, sys: 53.9 ms, total: 2.16 s\n",
+      "Wall time: 9.59 s\n"
+     ]
+    }
+   ],
+   "source": [
     "import pandas as pd\n",
-    "dir_path = 'waypoints/s_test.csv'\n",
+    "dir_path = 'waypoints/ngeeann2.0.csv'\n",
     "df = pd.read_csv(dir_path)\n",
     "ax = df['x'].values.tolist()\n",
     "ay = df['y'].values.tolist()\n",
-    "# ax, ay = ax[0:40], ay[0:40]\n",
-    "boundary = 5.0\n",
-    "path = Spline(ax, ay, boundary)\n",
-    "visualize(path, input_only=True)\n"
+    "ax, ay = ax[0:25], ay[0:25]\n",
+    "boundary = 0.5\n",
+    "\n",
+    "path_planning(ax, ay, boundary)\n",
+    "\n"
    ]
   }
  ],
